--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@
 
 <body>
     <header
-        style="background-image: url('/img/about-section-bg-img.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 70vh;">
+        style="background-image: url('./img/about-section-bg-img.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 70vh;">
         <div class="container-xxl position-relative p-0"
             style="background-image: url('/images/Untitled.jpeg'); background-size: cover; background-position: center center; background-repeat: no-repeat;">
             <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3 py-lg-0">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8 col-sm-12 order-lg-2 order-sm-3 p-0 mt-sm-3">
-                        <img src="/img/inside-restaurant-topview.jpg" class="img-fluid position-absolute"
+                        <img src="./img/inside-restaurant-topview.jpg" class="img-fluid position-absolute"
                             alt="Restaurant Top View">
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                 <div class="col-lg-8" style="margin-top: 170px;">
                     <div class="row mb-4 me-5">
                         <div class="col-6 d-flex flex-column align-items-center">
-                            <img src="/img/nyus-toasted-bread-with-grape.png" width="75%" class="img-fluid mb-2"
+                            <img src="./img/nyus-toasted-bread-with-grape.png" width="75%" class="img-fluid mb-2"
                                 alt="Toasted Bread with Grape" style="margin-right: -40px;">
                             <p class="text-white text-center">
                                 <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
@@ -248,7 +248,7 @@
                             </p>
                         </div>
                         <div class="col-6 d-flex flex-column align-items-center ">
-                            <img src="/img/nyus-cheesy-fruits-cake.png" width="75%" class="img-fluid mb-2"
+                            <img src="./img/nyus-cheesy-fruits-cake.png" width="75%" class="img-fluid mb-2"
                                 alt="Cheesy Fruits Cake" style="margin-left: -40px;">
                             <p class="text-white text-center">
                                 <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
@@ -287,7 +287,7 @@
             <div class="container">
                 <div class="row g-0 my-4 me-sm-4">
                     <div class="col-4">
-                        <img src="/img/chef-2-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
+                        <img src="./img/chef-2-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
                             alt="Tony Gordon">
                         <h4 class="mt-3 text-center mt-lg-4 mt-sm-4 fw-semibold"
                             style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <img src="/img/chef-1-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
+                        <img src="./img/chef-1-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
                             alt="Mike Tomskin">
                         <h4 class="mt-3 text-center mt-lg-4 mt-sm-4 fw-semibold"
                             style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <img src="/img/chef-3-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
+                        <img src="./img/chef-3-qlu4vaaxkuoa17bxosbyhiouv29n9w40zded2h1y9k.jpg" class="img-fluid"
                             alt="Edward Solo">
                         <h4 class="mt-3 text-center mt-lg-4 mt-sm-4 fw-semibold"
                             style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
