--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,346 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css" />
-    <style>
-      .hero {
-          background-image: url('img/background2.jpg');
-          background-size: cover; 
-          background-repeat: no-repeat; 
-          background-position: center; 
-          height: 55vh;  
-      }
-  </style>
-    <title>Contact Us</title>
-  </head>
-  <body>
-    <section class="hero">
-    <header>
-      <div class="logo">
-        <img src="img/logo.png" alt="LOGO" />
-        <b>NYUS</b>
-      </div>
-      <nav>
-        <button class="toggle-btn" id="toggle-btn">&#9776;</button>
-        <ul id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li class="dropdown">
-            <a href="menu.html">Menu &#9662;</a>
-            <ul class="dropdown-content">
-              <li><a href="menu.html">Light</a></li>
-              <li><a href="menu.html">Dark</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html" class="active">Contact</a></li>
-          <li><input type="text" placeholder="Search Menu" class="search-input">
-            <i class="fas fa-search search-icon"></i></li>
-          <li></li>
-          <button class="btn1">
-            <a href="reservation.html"><b>Reservation</b></a>
-          </button>
-        </ul>
-      </nav>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About Us - Hiking Bar & Restaurant</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./aboutus.css">
+
+    <!-- Google Font -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./img//logo.png" type="image/x-icon" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="apple-touch-startup-image" href="https://www.wepora.com/asset/img/wepora-logo.png">
+    <link rel="icon" type="image/x-icon" href="https://www.wepora.com/asset/img/wepora-logo.png">
+    <meta name="description"
+        content="Wepora is a best Graphics, software and Web Development company  and provides all IT solutions to their client. In india.." />
+    <meta name="Keywords"
+        content="website design | website development | website logo  |  website hosting  | logo design| logo design ideas  | SEO | android |  best software company in india | cheapest | graphic design | Shrikant Kushwaha">
+    <meta name="author" content="contain by Wepora team">
+    <meta name="copyright" content="Copyright © 2020 Wepora" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+</head>
+<style>
+    a {
+        text-decoration: none;
+        color: white;
+
+    }
+
+    a:hover {
+        color: yellow;
+    }
+</style>
+
+<body>
+    <header
+        style="background-image: url('./img/about-section-bg-img.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 70vh;">
+        <div class="container-xxl position-relative p-0"
+            style="background-image: url('/images/Untitled.jpeg'); background-size: cover; background-position: center center; background-repeat: no-repeat;">
+            <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3 py-lg-0">
+                <a href="" class="navbar-brand p-0 position-absolute mt-4"
+                    style="display: flex; align-items: center; margin-left: -70px;">
+                    <i class="bi bi-dot text-warning" style="font-size: 900%;"></i>
+                    <h1 class="text-white mt-4 fw-bold"
+                        style="font-size: 120%; margin-left: -60px; letter-spacing: 10px;">NYUS</h1>
+                </a>
+
+                <button class="navbar-toggler btn-sm" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse mt-3" id="navbarCollapse" style="left:-17px; position: relative;">
+                    <div class="navbar-nav ms-auto py-0 pe-4">
+                        <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
+                        <a href="/aboutus.html" class="nav-item nav-link active mx-3">About US</a>
+                        <div class="nav-item dropdown">
+                            <a href="/menu.html" class="nav-link mx-3" id="menuDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Menu
+                                <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown"
+                                style="border-top: 3px solid gold;">
+                                <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light
+                                        Theme</a></li>
+                                <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark"
+                                        data-theme="dark">Dark Theme</a></li>
+                            </ul>
+                        </div>
+                        <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
+                        <a href="contact.html" class="nav-item nav-link mx-3">Contact</a>
+                    </div>
+                    <a href="/reservation.html" class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px;">Reservation</a>
+                </div>
+            </nav>
+            <!-- nav body start -->
+            <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
+                <div class="container my-5 py-5 text-center">
+                    <div class="row align-items-center g-5">
+                        <div class="col-lg-6 mx-auto">
+                            <h1 class="display-3 text-white fw-bold" style="font-size: 73px;">CONTACT US</h1>
+                            <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Massa praesent sit suspendisse ac
+                                volutpat amet.<br /> Commodo elit at non neque ullamcorper id.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center" style="margin-top: 75px;">
+                        <div class="border-start border-1 border-warning" style="height: 86px;"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- nav body end -->
+        </div>
     </header>
-    <main class="content">
-      <section>
-        <h1 class="center">Contact</h1>
-        <div class="para">
-          <p>Massa praesent sit suspendisse ac volutpat amet. <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;Commodo elit at non neque ullamcorper id.</p>
-    </div>
-      </section>
-    </main>
-  </section>
-    <script src="js/app.js"></script>
-  </body>
+
+
+
+
+
+    <!-- Our Story Start -->
+    <section class="container-fluid py-5">
+        <div class="container mt-lg-5">
+            <div class="row">
+                <div class="col-lg-12 mx-auto text-center col-sm-12 mb-sm-3">
+                    <p class="fw-bold text-center"
+                        style="font-size: 0.8125rem; text-transform: uppercase; letter-spacing: 2px;">Our Story</p>
+                    <h2 class="text-center py-3" style="font-weight: 700; font-size: 3rem;">3 E 19th St, 123 Fifth
+                        Avenue, </br> NY 10160, New York, USA</h1>
+                        <div class="container w-75">
+                            <p class="fw-medium text-center fs-6 fs-sm-6 mx-sm-3 mx-lg-0" style="color: #878484;">
+                                Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis
+                                lectus ut
+                                euismod. Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare
+                                nulla
+                                facilisi. Dignissim volutpat velit ut dignissim aliquet nisl, pretium, viverra
+                                bibendum.
+                            </p>
+                            <a href=""
+                                class="btn btn-outline-dark px-3 fw-bold my-3 text-uppercase rounded-0 custom-font "
+                                style="padding: 10px;">Book A Table Now</a>
+                        </div>
+                        <div class="my-5">
+                            <p class="fw-bold text-center"   style="font-size: 0.8125rem; text-transform: uppercase; letter-spacing: 2px;">Telephone Reservations</p>
+                        <h3 style="font-size: 48px;">12 34 56 7890</h3>
+                        <p class="text-muted">info@hikingbarella.com</p>
+                        </div>
+                       
+                </div>
+            </div>
+
+        </div>
+    </section>
+  
+    <section>
+        <div class="row">
+            <div class="col-md-6"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.133573715352!2d81.04435787473436!3d6.87459501898433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae465b3e20c6727%3A0x1cae1ff0b71ae3a4!2sHiking%20bar%20%26%20Restaurant!5e0!3m2!1sen!2slk!4v1721675856554!5m2!1sen!2slk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            <div class="col-md-6 p-5">
+                <div class="container">
+                    <h4 class="text-uppercase" style="font-size: 1.5rem; font-weight: 700;">Send Us a Message</h4>
+                    <p class="text-muted py-3">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.  <br>
+                        Consequatur laboriosam unde enim! Aperiam odit veniam ad! Labore eius.
+                    </p>
+                    <form action="" method="post">
+                        <input class=" mt-3 rounded-0 form-control" type="text" placeholder="Full Name*" name="" id="">
+                        <input class=" mt-3 rounded-0 form-control" type="text" placeholder="Active Email*" name="" id="">
+                        <textarea class=" mt-3 rounded-0 form-control" rows="5" placeholder="Your Message Here" name="" id=""></textarea>
+                        <a href=""
+                                    class="btn btn-outline-dark px-3 my-3 text-uppercase rounded-0 custom-font "
+                                    style="padding: 10px;">Send Message</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Footer -->
+    <footer class="page-footer font-small py-5 lighten-5" style="background-color:black;">
+
+        <!-- Footer Links -->
+        <div class="container text-md-left mt-5 text-light">
+
+            <!-- Grid row -->
+            <div class="row mt-3 dark-grey-text">
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-4 col-xl-4 mb-4 pe-5">
+
+                    <!-- Content -->
+                    <h6 class="text-uppercase font-weight-bold">Company name</h6>
+                    <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p class="text-start">Here you can use rows and columns to organize your footer content. Lorem ipsum
+                        dolor sit amet,
+                        consectetur
+                        adipisicing elit.</p>
+                    <p>
+                        <!-- Facebook -->
+                        <a class="">
+                            <i class="fab fa-facebook-f text-warning  mx-4"> </i>
+                        </a>
+                        <!-- Twitter -->
+                        <a class="tw-ic">
+                            <i class="fab fa-twitter text-warning white-text mx-4"> </i>
+                        </a>
+                        <!-- Google +-->
+                        <a class="gplus-ic">
+                            <i class="fab fa-google-plus-g text-warning white-text mx-4"> </i>
+                        </a>
+                        <!--Linkedin -->
+                        <a class="li-ic">
+                            <i class="fab fa-linkedin-in text-warning white-text mx-4"> </i>
+                        </a>
+                        <!--Instagram-->
+                        <a class="ins-ic">
+                            <i class="fab fa-instagram text-warning white-text"> </i>
+                        </a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-3 pe-5  mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Products</h6>
+                    <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-start" style="width: 60px;">
+                    <div class="text-start">
+                        <p>
+                            <a class="dark-grey-text" href="#!">MDBootstrap</a>
+                        </p>
+                        <p>
+                            <a class="dark-grey-text" href="#!">MDWordPress</a>
+                        </p>
+                        <p>
+                            <a class="dark-grey-text" href="#!">BrandFlow</a>
+                        </p>
+                        <p>
+                            <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
+                        </p>
+                    </div>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 pe-5 mb-4 pe-5">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+                    <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a class="dark-grey-text" href="#!">Your Account</a>
+                    </p>
+                    <p>
+                        <a class="dark-grey-text" href="#!">Become an Affiliate</a>
+                    </p>
+                    <p>
+                        <a class="dark-grey-text" href="#!">Shipping Rates</a>
+                    </p>
+                    <p>
+                        <a class="dark-grey-text" href="#!">Help</a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mb-md-0 mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <i class="fas fa-home text-warning mr-3"></i> New York, NY 10012, US
+                    </p>
+                    <p>
+                        <i class="fas fa-envelope text-warning mr-3"></i> info@example.com
+                    </p>
+                    <p>
+                        <i class="fas fa-phone text-warning mr-3"></i> + 01 234 567 88
+                    </p>
+                    <p>
+                        <i class="fas fa-print text-warning mr-3"></i> + 01 234 567 89
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="container">
+            <div class="footer-copyright text-white py-3 text-start">
+                <p>Copyright © 2024 Hikin Bar & Restaurant </p>
+            </div>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+
+
+    <!--content end-->
+    <!-- JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+        crossorigin="anonymous"></script>
+
+    <!-- Footer end -->
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz4fnFO9gybRa3x8b0X4aFf8KY1yD9bg39H1jqBSYJTp4lg2f5ZdUmS9gQ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-H2Q4VPr+FfQk8e/4+YAl4ikANuBz8Jp7tLOpcD6XZBx1zFV9vv9qw5iCq9rHBOJt"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap JS (with Popper.js) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+
+    <!-- Additional JS libraries -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+</body>
+
 </html>
