--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
 
                 <div class="collapse navbar-collapse mt-3" id="navbarCollapse" style="left:-17px; position: relative;">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
-                        <a href="/aboutus.html" class="nav-item nav-link active mx-3">About US</a>
+                        <a href="index.html" class="nav-item nav-link mx-3">Home</a>
+                        <a href="about.html" class="nav-item nav-link active mx-3">About US</a>
                         <div class="nav-item dropdown">
                             <a href="/menu.html" class="nav-link mx-3" id="menuDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
