--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <!-- signature menu start -->
     <section
-        style="background-image: url('/img/signeture-bg.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 52vh;">
+        style="background-image: url('./img/signeture-bg.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 52vh;">
         <div class="container-xxl d-flex  align-items-start justify-content-start">
             <div class="container my-5 my-md-0 my-sm-0 text-start">
                 <div class="row align-items-start g-5">
