--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
     <!-- testimonal  Start -->
     <section class=" text-white mt-0 mt-sm-5 position-relative ">
         <div class="container-fluid d-flex flex-column align-items-center justify-content-center text-center"
-            style="background-image: url('/img/testimonail-section-bg-1.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; min-height: 55vh;">
+            style="background-image: url('./img/testimonail-section-bg-1.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; min-height: 55vh;">
 
             <!-- large -->
             <h1 class="mt-lg-5 mt-md-0 mt-sm-0 text-start text-nowrap fw-semibold text-uppercase d-none d-lg-block d-md-none d-sm-none"
